[package]
name = "chicago_crime_analysis"
version = "0.1.0"
edition = "2021"
authors = ["Tanishka Gilara <tanishka@bu.edu>"]
description = "Analysis of crime data in Chicago using Rust."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
chrono = "0.4"
plotters = "0.3"

[dev-dependencies]

